[package]
name = "meshlet-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["meshlet", "meshlet_processor"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"
